--- a/test/myfirsthtml.html
+++ b/test/myfirsthtml.html
@@ -14,5 +14,6 @@
         <p>hi i love you daddy 4!</p>
         <p>hi i love you daddy 5!</p>
         <p>hi i love you daddy 6!</p>
+        <script type="text/javascript" src="test.js"></script>
     </body>
 </html>
